# zeppelin

./: .env.example  .gitignore  .jscpd.json  CLAUDE.md  Cargo.toml  Dockerfile  LEGITIMIZE_REPORT.md  LICENSE  NOTICE  README.md  SKILL.md  cleanup-zeppelin.md  codecov.yml  deny.toml  docker-compose.test.yml  docker-compose.yml  mutants.toml  zeppelin.toml.example
.cargo/: audit.toml
.github/workflows/: ci.yml  mutation-weekly.yml  quality-gates.yml
api/: zeppelin-api.yaml
benches/: core_benchmarks.rs
benchmarks/: Cargo.toml  compare.py
benchmarks/src/: client.rs  datasets.rs  main.rs  results.rs  turbopuffer.rs
benchmarks/src/scenarios/: bm25.rs  compaction.rs  filtered_query.rs  index_comparison.rs  ingest.rs  mixed_workload.rs  mod.rs  query_latency.rs  query_throughput.rs  scale_test.rs
clients/python/: README.md  pyproject.toml
clients/python/tests/: test_client.py  test_filters.py  test_integration.py  test_rank_by.py
clients/python/zeppelin/: __init__.py  client.py  filters.py  rank_by.py  types.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: client.ts  errors.ts  filters.ts  index.ts  rank-by.ts  types.ts
clients/typescript/tests/: client.test.ts  filters.test.ts  integration.test.ts  rank-by.test.ts
demo/monitoring/: docker-compose.yml  prometheus.yml
demo/monitoring/grafana/provisioning/dashboards/: zeppelin.json
deploy/: .env.example  apply-security.sh  ec2-bench.sh  ec2-userdata.sh  run-server.sh
docs/slides/: 01-why-object-storage.html  index.html  nav.js  style.css
embed_service/: main.py  requirements.txt
formal-verifications/: FAILURES.md  README.md
formal-verifications/proptest/: checksum_stability.rs  ivf_recall.rs  merge_dedup.rs  namespace_validation.rs
formal-verifications/tla/: BM25QueryConsistency.cfg  BM25QueryConsistency.tla  BM25ScoreCommutativity.cfg  BM25ScoreCommutativity.tla  BatchWriterCorrectness.cfg  BatchWriterCorrectness.tla  BeamSearchTermination.cfg  BeamSearchTermination.tla  BitmapBuildCoverage.cfg  BitmapBuildCoverage.tla  BitmapFilterAlgebra.cfg  BitmapFilterAlgebra.tla  BitmapSearchEquivalence.cfg  BitmapSearchEquivalence.tla  CacheConsistency.cfg  CacheConsistency.tla  CompactionRetryConvergence.cfg  CompactionRetryConvergence.tla  CompactionSafety.cfg  CompactionSafety.tla  ConcurrentNamespaceCreate.cfg  ConcurrentNamespaceCreate.tla  DeferredDeleteSafety.cfg  DeferredDeleteSafety.tla  HierarchicalBuildAtomicity.cfg  HierarchicalBuildAtomicity.tla  HierarchicalVectorCoverage.cfg  HierarchicalVectorCoverage.tla  IndexAtomicity.cfg  IndexAtomicity.tla  InvertedIndexBuildSafety.cfg  InvertedIndexBuildSafety.tla  ManifestCacheConsistency.cfg  ManifestCacheConsistency.tla  MultiWriterLease.cfg  MultiWriterLease.tla  NamespaceDeleteUpsertRace.cfg  NamespaceDeleteUpsertRace.tla  NamespaceDeletion.cfg  NamespaceDeletion.tla  (+11 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bitmap_index.rs  fuzz_filter.rs  fuzz_global_index.rs  fuzz_inverted_index.rs  fuzz_manifest.rs  fuzz_quantization.rs  fuzz_tree_node.rs  fuzz_wal_fragment.rs
loom-tests/: Cargo.toml
loom-tests/tests/: loom_tests.rs
python/: README.md  pyproject.toml
python/zeppelin/: __init__.py  client.py  exceptions.py  types.py
scripts/: run-benchmarks.sh  test.sh
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  query.rs  startup.rs  types.rs
src/cache/: manifest_cache.rs  memory_cache.rs  mod.rs
src/compaction/: background.rs  mod.rs
src/fts/: bm25.rs  global_index.rs  inverted_index.rs  mod.rs  rank_by.rs  tokenizer.rs  types.rs  wal_cache.rs  wal_scan.rs
src/index/: distance.rs  f16_storage.rs  filter.rs  mod.rs  traits.rs
src/index/bitmap/: build.rs  evaluate.rs  mod.rs
src/index/hierarchical/: build.rs  mod.rs  search.rs
src/index/ivf_flat/: build.rs  kmeans.rs  mod.rs  search.rs
src/index/quantization/: mod.rs  pq.rs  sq.rs
src/namespace/: manager.rs  mod.rs
src/server/: middleware.rs  mod.rs  routes.rs
src/server/handlers/: health.rs  metrics.rs  mod.rs  namespace.rs  profiling.rs  query.rs  vectors.rs
src/storage/: mod.rs  store.rs
src/wal/: batch_writer.rs  fragment.rs  lease.rs  manifest.rs  mod.rs  reader.rs  writer.rs
tests/: api_tests.rs  attrs_laziness_tests.rs  bitmap_tests.rs  cache_tests.rs  compaction_tests.rs  counting_attribution_tests.rs  e2e_perf_tests.rs  error_envelope_tests.rs  eventual_tombstone_tests.rs  filter_underfill_tests.rs  fts_e2e_tests.rs  fts_perf_tests.rs  fts_stress_tests.rs  fts_tests.rs  get_count_bench.rs  hardening_tests.rs  hierarchical_tests.rs  incremental_compaction_tests.rs  index_tests.rs  invariant_violation_tests.rs  loom_tests.rs  malformed_request_tests.rs  multi_writer_lease_tests.rs  namespace_tests.rs  no_silent_partials_tests.rs  observability_tests.rs  proptest_checksum_stability.rs  proptest_filter_eval.rs  proptest_ivf_recall.rs  proptest_merge_dedup.rs  proptest_multi_writer_lease.rs  storage_tests.rs  stress_tests.rs  strong_freshness_tests.rs  tla_violation_tests.rs  validation_tests.rs  wal_fragment_cache_tests.rs  wal_tests.rs  write_path_tests.rs
tests/common/: assertions.rs  counting.rs  harness.rs  mod.rs  server.rs  vectors.rs
