[package]
name = "zeppelin"
version = "0.1.0"
edition = "2021"
description = "S3-native vector search engine"
license = "Apache-2.0"
rust-version = "1.85"

[features]
default = []
profiling = ["dep:pprof"]

[[bin]]
name = "zeppelin"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Storage
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rmp-serde = "1"
toml = "0.8"

# IDs
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Concurrency
dashmap = "6"

# Error handling
thiserror = "2"

# Byte buffers
bytes = "1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Metrics
prometheus = "0.13"
lazy_static = "1"

# Config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2"

# Async trait
async-trait = "0.1"

# Futures
futures = "0.3"

# Random (for k-means++)
rand = "0.8"

# Half-precision floats (f16)
half = { version = "2", features = ["std", "serde"] }

# Bitmap indexes (pre-filter)
roaring = { version = "0.10", features = ["serde"] }

# Full-text search (BM25)
unicode-segmentation = "1.11"
rust-stemmers = "1.2"

# CPU profiling (optional, behind "profiling" feature)
pprof = { version = "0.14", features = ["flamegraph", "prost-codec"], optional = true }

[profile.release]
debug = 1
lto = "thin"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
tempfile = "3"
tokio-test = "0.4"
assert_approx_eq = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_benchmarks"
harness = false
