[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "zeppelin-client"
version = "0.1.0"
description = "Python client for the Zeppelin vector search engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-httpx>=0.21",
]
